// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders correctly 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  Test
</a>
`;

exports[`Link renders correctly with after content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[after]"
  >
    Test
    <span>
      mock
    </span>
  </span>
</a>
`;

exports[`Link renders correctly with before content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[before]"
  >
    ​
    <span>
      mock
    </span>
    Test
  </span>
</a>
`;

exports[`Link renders correctly with both before and after content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[after] cssClass[before]"
  >
    ​
    <span>
      mock
    </span>
    Test
    <span>
      mock
    </span>
  </span>
</a>
`;

exports[`Link renders correctly with three words and both before and after content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[before]"
  >
    ​
    <span>
      mock
    </span>
    Test
  </span>
   
  link
   
  <span
    className="cssClass[wordWithContent] cssClass[after]"
  >
    again
    <span>
      mock
    </span>
  </span>
</a>
`;

exports[`Link renders correctly with two words and after content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  Test
   
  
   
  <span
    className="cssClass[wordWithContent] cssClass[after]"
  >
    link
    <span>
      mock
    </span>
  </span>
</a>
`;

exports[`Link renders correctly with two words and before content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[before]"
  >
    ​
    <span>
      mock
    </span>
    Test
  </span>
   
  
   
  link
</a>
`;

exports[`Link renders correctly with two words and both before and after content 1`] = `
<a
  className="cssClass[link] hoverable cssClass[focusVisible] cssClass[sm] cssClass[text]"
  data-tx="10.0.0"
  href="#"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="link"
>
  <span
    className="cssClass[wordWithContent] cssClass[after] cssClass[before]"
  >
    ​
    <span>
      mock
    </span>
    Test link
    <span>
      mock
    </span>
  </span>
</a>
`;
